# KVStore

./: .env  .gitignore  CMakeLists.txt
apps/kvd/: main.cpp
include/app/: command.hpp  command_registry.hpp  context.hpp  dispatch.hpp  handler.hpp  response.hpp
include/app/handlers/: handlers_admin.hpp  handlers_kv.hpp  handlers_numeric.hpp  handlers_ttl.hpp
include/config/: app_config.hpp  builder.hpp  config.hpp  spec.hpp  types.hpp
include/domain/: kv_store.hpp  types.hpp
include/runtime/: dispatch_helpers.hpp  request_context.hpp  status.hpp
include/server/: server.hpp  session.hpp  socket_io.hpp
include/services/: kv_service_impl.hpp  numeric_service_impl.hpp  ttl_service_impl.hpp
include/spec/: commands.def  schema.hpp
include/transport/: dispatcher.hpp
include/transport/kvn1/: adapter.hpp  codec.hpp  types.hpp
include/ttl/: cleaner.hpp  types.hpp  wheel.hpp
include/util/: time.hpp  utils.hpp
proto/kvd/: options.proto
proto/kvd/api/v1/: envelope.proto  kv.proto  numeric.proto  ttl.proto
src/app/: command_registry.cpp  dispatch.cpp
src/app/handlers/: handlers_admin.cpp  handlers_kv.cpp  handlers_numeric.cpp  handlers_ttl.cpp
src/config/: builder.cpp  config.cpp
src/domain/: kv_store.cpp
src/runtime/: dispatch_helpers.cpp
src/server/: server.cpp  session.cpp  socket_io.cpp
src/services/: kv_service_impl.cpp  numeric_service_impl.cpp  ttl_service_impl.cpp
src/spec/: schemas.cpp
src/transport/kvn1/: adapter.cpp  codec.cpp
src/ttl/: cleaner.cpp  wheel.cpp
src/util/: time.cpp  utils.cpp
tests/: client.py
tests/client/: cli.py  client.py  proto_runtime.py  transport.py
tools/protoc-gen-kvd/: main.py  model.py  protoc-gen-kvd  reader.py  renderer.py  requirements.txt  validator.py  writer.py
